# cfg-or-panic

./: Cargo.toml  README.md
.github/workflows/: check-test.yaml
cfg-or-panic/: Cargo.toml
cfg-or-panic/src/: lib.rs
cfg-or-panic/tests/: basic.rs
src/: lib.rs
tests/: const_function.rs  function.rs  impl.rs  mod.rs  return_type.rs
